Fix GitHub Action permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   build-and-release:
+    permissions:
+      contents: write
+    
     strategy:
       fail-fast: false
       matrix:
